# HFT-Simulator

./: CMakeLists.txt  README.md
src/: MarketDataFeed.cpp  MarketDataFeed.h  MatchingEngine.cpp  MatchingEngine.h  OrderBook.cpp  OrderBook.h  StrategyInterface.h  main.cpp
